--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>FoPoRef Prototype</title>
+    <style>
+      * {box-sizing: border-box;}
+    </style>
   </head>
   <body style='background-color: whitesmoke'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
