--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href="./src/index.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -20,9 +21,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>FoPoRef Prototype</title>
-    <style>
-      * {box-sizing: border-box;}
-    </style>
   </head>
   <body style='background-color: whitesmoke'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
